--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon src/app.ts ",
     "test": "jest --watchAll",
     "build": "tsc"
   },
@@ -48,8 +48,11 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.4",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.30",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
     "pino": "^7.0.2",
     "pino-pretty": "^7.1.0",
     "prom-client": "^14.0.0",
